Fixed scrollbars

--- a/booker/static/css/calendar.css
+++ b/booker/static/css/calendar.css
@@ -39,6 +39,18 @@ span.time {
 
 }
 
+.container {
+	/*background-color: black;*/
+}
+
+.cal_container {
+	background-color: white;
+}
+
+.TitleText {
+	font-size: 20px;
+}
+
 .form-inline {
 	padding-bottom: 0px;
 	margin-bottom: 0px !important;
@@ -51,8 +63,15 @@ body {
 }
 
 #calendar {
-	width: 100%;
+	/*overflow-y: scroll;*/
+	overflow-x: hidden; 
+	width: 90%;
+	/*height: 84.9%;*/
 	margin: 0 auto;
+}
+
+.fc-content {
+	height: 50%;
 }
 
 form_field{
